--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
-{
+  {
     "build": {
       "env": {
+        "NEXT_PUBLIC_SKIP_ESLINT": "true",
         "NODE_VERSION": "18"
       }
     }
   }
-  
